Bug 381424 - When there's text in the search, the lock button is not accessible
Summary: When there's text in the search, the lock button is not accessible
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcompletion
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Gil
URL:
Keywords:
: 381747 382326 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-20 03:12 UTC by Thiago Macieira
Modified: 2017-08-02 11:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments
Screenshot of the problem (4.65 KB, image/png)
2017-06-20 03:12 UTC, Thiago Macieira
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Macieira 2017-06-20 03:12:03 UTC
Created attachment 106179 [details]
Screenshot of the problem

To reproduce:
1. Alt+Q
2. Type anything

Expected:
The lock button is available, next to the clear button, in the exact same position it was before there was text.

Results:
The lock button is replaced by a bigger clear button. See attached screenshot.
Comment 1 Thiago Macieira 2017-06-20 03:16:36 UTC
I did not pay attention if this happened before the OpenSUSE Tumbleweed upgrade to Qt 5.9. But this didn't use to happen a couple of months ago, so it's either a 5.5.x problem, an Akonadi/KDEPIM 17.04 problem, or Qt 5.9 one.
Comment 2 Christoph Feck 2017-06-27 18:14:04 UTC
KLineEdit, for whatever reason, still has its own clearButton.
Comment 3 Wolfgang Bauer 2017-06-29 16:24:05 UTC
*** Bug 381747 has been marked as a duplicate of this bug. ***
Comment 4 Wolfgang Bauer 2017-07-14 14:57:45 UTC
*** Bug 382326 has been marked as a duplicate of this bug. ***
Comment 5 Laurent Montel 2017-08-02 11:28:21 UTC
Git commit 17de924ad746f75ebd47c85dc7ddcc5d19de8827 by Montel Laurent.
Committed on 02/08/2017 at 11:26.
Pushed by mlaurent into branch 'Applications/17.08'.

Fix Bug 381424 - When there's text in the search, the lock button is not accessible

FIXED-IN: 5.6.0

Convert it to QLineEdit as it's a bug in klineedit + new qt
I don't know where is the bug and I don't have time to investigate it.
And this lineedit doesn't need to have klineedit feature

M  +33   -0    messagelist/autotests/searchlinestatustest.cpp
M  +2    -0    messagelist/autotests/searchlinestatustest.h
M  +3    -4    messagelist/src/core/widgetbase.cpp
M  +2    -2    messagelist/src/core/widgetbase.h
M  +8    -3    messagelist/src/core/widgets/quicksearchline.cpp
M  +1    -0    messagelist/src/core/widgets/quicksearchline.h
M  +44   -2    messagelist/src/core/widgets/searchlinestatus.cpp
M  +12   -2    messagelist/src/core/widgets/searchlinestatus.h

https://commits.kde.org/messagelib/17de924ad746f75ebd47c85dc7ddcc5d19de8827