Fix Bug 381424 - When there's text in the search, the lock button is not accessible

FIXED-IN: 5.6.0
BUG: 381424

Convert it to QLineEdit as it's a bug in klineedit + new qt
I don't know where is the bug and I don't have time to investigate it.
And this lineedit doesn't need to have klineedit feature